--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 port = 5000
 db_URL = mongodb://localhost:27017/
+DB_NAME=book-store
 NODE_ENV=dev
 api_version = /v1
 base_url = http://localhost:5000
