--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.6.3",
-    "paypal-rest-sdk": "^1.8.1"
+    "paypal-rest-sdk": "^1.8.1",
+    "public-ip": "^4.0.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "loadtest": "^5.1.2",
