--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^6.6.3",
     "paypal-rest-sdk": "^1.8.1",
     "public-ip": "^4.0.4",
+    "redis": "^3.1.2",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   },
