--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "~4.16.1",
     "express-async-handler": "^1.1.4",
     "express-fingerprint": "^1.2.2",
+    "express-graphql": "^0.12.0",
     "express-rate-limit": "^5.5.0",
     "googleapis": "^85.0.0",
+    "graphql": "^16.0.1",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "joi": "^17.4.2",
